Name:           gtl
Version:        0.1
Author:         Henning Günther <guenther@iti.cs.tu-bs.de>
		Henning Basold <h.basold@tu-braunschweig.de>
Build-Type:     Custom
Cabal-Version:  >= 1.10
Description:
  A tool to verify GALS (globally asynchronous, locally synchronous) models using both
  synchronous and asynchronous model checking formalisms.

Library
  Build-Depends:        base,array,containers,language-scade,language-promela,bdd,mtl,process,filepath,binary,bytestring,bzlib,directory,extensible-exceptions,graphviz,fgl
  Hs-Source-Dirs: lib
  Exposed-Modules:
    Language.GTL.Parser
    Language.GTL.Parser.Lexer
    Language.GTL.Parser.Syntax
    Language.GTL.Parser.Token
    Language.GTL.Model
    Language.GTL.Translation
    Language.GTL.PromelaCIntegration
    Language.GTL.LTL
    Language.GTL.ErrorRefiner
    Language.GTL.PromelaDynamicBDD
    Language.GTL.PrettyPrinter
    Language.GTL.Backend
    Language.GTL.Backend.Scade
    Language.GTL.Backend.None
    Language.GTL.Backend.All
    Language.GTL.LocalVerification
    Language.GTL.Expression
    Language.GTL.Buchi
    Language.GTL.PromelaNative

Executable gtl
  Build-Depends: base,gtl,language-scade,language-promela,process,filepath
  Main-Is: Main.hs
