Name:           gtl
Version:        0.1
Author:         Henning Günther <guenther@iti.cs.tu-bs.de>
		Henning Basold <h.basold@tu-braunschweig.de>
Build-Type:     Custom
Cabal-Version:  >= 1.10
Description:
  A tool to verify GALS (globally asynchronous, locally synchronous) models using both
  synchronous and asynchronous model checking formalisms.

Flag SMTExts
  Description: Enables Z3-specific features of the SMT target
  Default: False

Library
  Build-Depends: base,array,containers,language-scade,language-promela,
    mtl,process,filepath,binary,bytestring,directory,extensible-exceptions,language-uppaal,fgl,hxt,pqueue,
    syb,smtlib2,text,atto-lisp,time,bitstream
  Hs-Source-Dirs: lib
  if flag(SMTExts)
    GHC-Options: -fwarn-unused-imports -DSMTExts
  else
    GHC-Options: -fwarn-unused-imports
  Exposed-Modules:
    Language.GTL.Parser
    Language.GTL.Parser.Lexer
    Language.GTL.Parser.Syntax
    Language.GTL.Parser.Token
    Language.GTL.Parser.Monad
    Language.GTL.Model
    Language.GTL.Translation
    Language.GTL.LTL
    Language.GTL.ErrorRefiner
    Language.GTL.Backend
    Language.GTL.Backend.Scade
    Language.GTL.Backend.None
    Language.GTL.Backend.All
    Language.GTL.Expression
    Language.GTL.Buchi
    Language.GTL.Types
    Language.GTL.Restriction
    Language.GTL.DFA
    --Language.GTL.Target.PromelaCUDD
    Language.GTL.Target.Promela
    Language.GTL.Target.PromelaKCG
    --Language.GTL.Target.PrettyPrinter
    Language.GTL.Target.Local
    Language.GTL.Target.Common
    Language.GTL.Target.UPPAAL
    Language.GTL.Target.Printer
    Language.GTL.Target.SMT
    Misc.ProgramOptions
    Misc.VerificationEnvironment
    Data.Graph.Inductive.Query.MinSpanningPath
    Data.Fix
    Data.MapMonad
    Data.AtomContainer

Executable gtl
  Build-Depends: base,gtl,language-scade,language-promela,process,filepath,directory,language-uppaal,mtl
  Main-Is: Main.hs
